# SnAIRbeats

./: .gitignore  .gitmodules  AnotherTest  AnotherTest.cpp  CMakeLists.txt  CTestTestfile.cmake  Doxyfile  HelloWorld  HelloWorld.cpp  IMUDriver  IMUDriverV2.cpp  Interrupts.cpp  README.md  SnairBeat  mraa.cpp  run_tests  test_mraa
.github/workflows/: Build.yml  build.yml
RandomDriver/: .gitignore  LICENSE  icm20948_defs.hpp  icm20948_defs_DataSheet.hpp  icm20948_i2c.cpp  icm20948_i2c.hpp  icm20948_utils.cpp  icm20948_utils.hpp
RandomDriver/example/: Makefile  test.cpp  test.yaml  test_yaml.cpp
SRC-Backup/: CMakeLists.txt  Doxyfile  printdata  qtviewer
SRC-Backup/src/: CMakeLists.txt  main.cpp
SRC-Backup/src/libs/ALSAAudio/include/: AudioLib.hpp
SRC-Backup/src/libs/CameraMaths/: CMakeLists.txt  CameraMaths.cpp
SRC-Backup/src/libs/CameraMaths/CAMERAMATHS_autogen/: mocs_compilation.cpp
SRC-Backup/src/libs/CameraMaths/CAMERAMATHS_autogen/FPXSIL2H2L/: moc_window.cpp
SRC-Backup/src/libs/CameraMaths/cam2opencv/: CMakeLists.txt
SRC-Backup/src/libs/CameraMaths/cam2opencv/qtviewer/: qtviewer  window.cpp  window.h
SRC-Backup/src/libs/CameraMaths/include/: CameraMaths.hpp
SRC-Backup/src/libs/DataCollection/: CMakeLists.txt  DataCollection.cpp
SRC-Backup/src/libs/GPIO/: CMakeLists.txt  gpioevent.cpp
SRC-Backup/src/libs/GPIO/include/: gpioevent.h
SRC-Backup/src/libs/I2C/: CMakeLists.txt
SRC-Backup/src/libs/I2C/include/: icm20948_defs.hpp
SRC-Backup/src/libs/IMUMaths/: IMUMaths.cpp
SRC-Backup/src/libs/PlayAudio/include/: PlayAudio.hpp
STL/: Bottom_Base.3mf  Bottom_Base.stl  Bottom_Tip.3mf  Bottom_Tip.stl  Top_Base.3mf  Top_Base.stl  Top_Tip.3mf  Top_Tip.stl
Testing/Temporary/: CTestCostData.txt
UML/: UML_Diagram.puml
docs/latex/: ALSAPlayer_8hpp.tex  ALSAPlayer_8hpp.tex.tmp  ALSAPlayer_8hpp__dep__incl.dot  ALSAPlayer_8hpp__incl.dot  ALSAPlayer_8hpp_source.tex  AudioFile_8h.tex  AudioFile_8h__dep__incl.dot  AudioFile_8h__incl.dot  AudioFile_8h_source.tex  AudioLib_8hpp.tex  AudioLib_8hpp__incl.dot  AudioLib_8hpp_source.tex  IMUMaths_8hpp.tex  IMUMaths_8hpp__dep__incl.dot  IMUMaths_8hpp__incl.dot  IMUMaths_8hpp_source.tex  PlayAudio_8hpp.tex  PlayAudio_8hpp__dep__incl.dot  PlayAudio_8hpp__incl.dot  PlayAudio_8hpp_source.tex  annotated.tex  classAudioFile.tex  classAudioLib_1_1AudioLib.tex  classAudioPlayerName_1_1AudioPlayer.tex  classGPIOName_1_1GPIOClass.tex  classGPIOName_1_1GPIOClass__coll__graph.dot  classIMUMathsName_1_1IMUMaths.tex  classIMUMathsName_1_1IMUMaths__coll__graph.dot  classPlayAudioName_1_1PlayAudio.tex  classicm20948_1_1ICM20948__I2C.tex  classicm20948_1_1ICM20948__I2C__coll__graph.dot  dir_0170be23494c8cf5d939e76f82693c63.tex  dir_0170be23494c8cf5d939e76f82693c63_dep.dot  dir_143cf6198f8fca24b671d5b6ebac509a.tex  dir_143cf6198f8fca24b671d5b6ebac509a_dep.dot  dir_1d8a4c1919ac9930dce0ea16ec11cfb2.tex  dir_1d8a4c1919ac9930dce0ea16ec11cfb2_dep.dot  dir_30fb83fcbdfa3f66eaa3a89f6dbc41f9.tex  dir_30fb83fcbdfa3f66eaa3a89f6dbc41f9_dep.dot  dir_37f3b851e7f3627c6cc073500acabf35.tex  (+53 more)
src/: CMakeLists.txt  main.cpp
src/SnairBeat_autogen/: mocs_compilation.cpp
src/SnairBeat_autogen/XURWVSAT46/: moc_window.cpp
src/libs/ALSAAudio/: AudioLib.cpp
src/libs/ALSAAudio/include/: AudioLib.hpp
src/libs/ALSAAudioTest/: CMakeLists.txt
src/libs/ALSAPlayer/: ALSAPlayer.cpp  CMakeLists.txt  README.md  play_plain_audio.cpp
src/libs/ALSAPlayer/include/: ALSAPlayer.hpp
src/libs/DataCollection/: CMakeLists.txt  DataCollection.cpp
src/libs/DataCollection/include/: DataCollection.hpp
src/libs/GPIO/: CMakeLists.txt  gpioevent.cpp
src/libs/GPIO/include/: gpioevent.h
src/libs/I2C/: CMakeLists.txt  README.md  icm20948_i2c.cpp  icm20948_utils.cpp
src/libs/I2C/include/: icm20948_defs.hpp  icm20948_i2c.hpp  icm20948_utils.hpp
src/libs/IMUMaths/: CMakeLists.txt  IMUMaths.cpp
src/libs/IMUMaths/include/: IMUMaths.hpp
src/libs/PlayAudio/: CMakeLists.txt  PlayAudio.cpp
src/libs/cam2opencv/: CMakeLists.txt
src/libs/cam2opencv/metadataprinter/: printdata  printdata.cpp
src/libs/cam2opencv/qtviewer/: window.h
src/libs/cam2opencv/qtviewer/qtviewer_autogen/EWIEGA46WW/: moc_window.cpp
tests/: AudioTests.cpp  CMakeLists.txt  CTestTestfile.cmake  GPIOTests.cpp  MathsTests.cpp  test_main.cpp
